# my_project

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  train.yml
api/: main.py
models/: .gitkeep
src/: __init__.py  evaluate.py  model.py  train.py
tests/: test_mlops.py
