[project]
name = "mlops-mnist"
version = "1.0.0"
description = "MLOps CI/CD Project with MNIST Classification"
requires-python = ">=3.10"

[tool.black]
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | data
    | models
    | mlruns
)/
'''

[tool.isort]
profile = "black"
skip = [".git", "venv", "__pycache__", "data", "models", "mlruns"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src", "api"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
